--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,20 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 
   <body>
+    <div class="navbar d-flex sticky-top align-items-center justify-content-between mb-5">
+      <div>
+        <h2 class="">Restaurantwiki</h2>
+      </div>
+      <div class="d-flex">
+      <%= link_to 'Restaurants', restaurants_path, class: "btn btn-primary rounded-lg mr-2" %>
+      <%= link_to 'New Restaurant', new_restaurant_path, class: "btn btn-primary rounded-lg" %>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
