applied some changes to the style of the page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -21,7 +21,7 @@
     <%= f.submit class: 'btn btn-primary' %>
   <% end %>
 
-  <h2 class="mt-4">Reviews</h2>
+  <h2 class="mt-4">Reviews 🤓</h2>
   <% @restaurant.reviews.each do |review| %>
     <li class="list-group-item">
     <%= review.content %> <%= review.rating %>
